--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export" : "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.1.3",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "reactstrap": "^9.0.1",
+    "slick-carousel": "^1.8.1"
   }
 }
