--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.4.4",
     "axios": "^0.26.0",
     "contentful": "^9.1.12",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
