--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/react": "^2.5.0",
     "axios": "^0.26.0",
     "contentful": "^9.1.12",
     "moment": "^2.29.1",
@@ -20,7 +22,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
