--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.1.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.4",
@@ -23,7 +24,8 @@
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
