--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@prismicio/react": "^2.5.0",
     "axios": "^0.26.0",
     "contentful": "^9.1.12",
+    "highlight.js": "^11.9.0",
+    "marked": "^10.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.2",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
